--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sen&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -11,6 +12,10 @@
   animation: showScreenAnimation 1s linear;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 @keyframes showScreenAnimation {
   from {
     opacity: 0;
@@ -19,4 +24,8 @@
   to {
     opacity: 1;
   }
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
